--- a/airsea_fluxes/airsea_data.ipynb
+++ b/airsea_fluxes/airsea_data.ipynb
@@ -40,7 +40,7 @@
     "rain = 0.0 # mm/hour\n",
     "mastHeight = 8.0\n",
     "cloudCover = 7.0 # oktas\n",
-    "QswIdeal = 970.0 # https://clearskycalculator.com/pyranometer.htm\n",
+    "QswIdeal = 970.0 # https://www.clearskycalculator.com/ (Get shortwave estimate for correct time of day and position.)\n",
     "\n",
     "# Extra input data for GSW\n",
     "surfaceSalinity = 23.0\n",
