Missing units corrected

--- a/airsea_fluxes/airsea_data.ipynb
+++ b/airsea_fluxes/airsea_data.ipynb
@@ -20,7 +20,7 @@
     "# Script to evaluate fluxes and length scales from bulk parameters\n",
     "Using COARE 3.5 for most parameters and GSW for thermal expansion and haline contraction coefficients. Note that the code containing the main output function for COARE has been adjusted to only return the values we need here.\n",
     "\n",
-    "2023-04-26 _kaihc@met.no_ "
+    "2025-04-21 _kaihc@met.no_ "
    ]
   },
   {
@@ -119,7 +119,7 @@
       "Latent heat flux, -57.00 W/m²\n",
       "Net longwave radiation, 18.35 W/m²\n",
       "Net heat flux, 266.38 W/m²\n",
-      "Buoyancy flux, -0.000000109\n",
+      "Buoyancy flux, -0.000000109 W/m²\n",
       "The Obhukov length is,  4.69 m\n"
      ]
     }
@@ -131,16 +131,9 @@
     "print(\"Latent heat flux, %5.2f W/m²\" % (-Qlatent))\n",
     "print(\"Net longwave radiation, %5.2f W/m²\" % (-LWnet))\n",
     "print(\"Net heat flux, %5.2f W/m²\" % (Qnet))\n",
-    "print(\"Buoyancy flux, %10.9f\" % (Bf))\n",
+    "print(\"Buoyancy flux, %10.9f W/m²\" % (Bf))\n",
     "print(\"The Obhukov length is, %5.2f m\" % (L))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
