--- a/airsea_fluxes/airsea_data.ipynb
+++ b/airsea_fluxes/airsea_data.ipynb
@@ -6,9 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import gsw  \n",
     "import coare35vn"
    ]
   },
@@ -17,8 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Script to evaluate fluxes and length scales from bulk parameters\n",
-    "Using COARE 3.5 for most parameters and GSW for thermal expansion and haline contraction coefficients. Note that the code containing the main output function for COARE has been adjusted to only return the values we need here.\n",
+    "# Script to evaluate fluxes from bulk parameters\n",
+    "Using COARE 3.5. Note that the code containing the main output function for COARE has been adjusted to only return the values we need here.\n",
     "\n",
     "2025-04-21 _kaihc@met.no_ "
    ]
@@ -40,15 +37,7 @@
     "rain = 0.0 # mm/hour\n",
     "mastHeight = 8.0\n",
     "cloudCover = 7.0 # oktas\n",
-    "QswIdeal = 970.0 # https://www.clearskycalculator.com/ (Get shortwave estimate for correct time of day and position.)\n",
-    "\n",
-    "# Extra input data for GSW\n",
-    "surfaceSalinity = 23.0\n",
-    "dBar = 0.1 # ie. depth \n",
-    "\n",
-    "# Reference density and gravity\n",
-    "g = 9.81\n",
-    "rho0 = 1025.0"
+    "QswIdeal = 970.0 # https://www.clearskycalculator.com/ (Get shortwave estimate for correct time of day and position.)"
    ]
   },
   {
@@ -62,7 +51,7 @@
     "albedo = 0.06\n",
     "Qshortwave = (1.0-albedo)*QswIdeal*(1-Cfrac**3)\n",
     "A = coare35vn.coare35vn(windspeed, airTemperature, relativeHumidity, bulkSST, P=MSLP, Rs=Qshortwave, sigH = Hs, zu=mastHeight, zt=mastHeight, zq=mastHeight, lat=latitude)\n",
-    "tau, Qsensible, Qlatent, LWnet, QnetMinusSW, evaporation = A[0].T\n"
+    "tau, Qsensible, Qlatent, LWnet, QnetMinusSW, evaporation = A[0].T"
    ]
   },
   {
@@ -71,43 +60,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate thermal expansion and haline contraction coefficients\n",
-    "alpha = gsw.alpha(surfaceSalinity, bulkSST, dBar)\n",
-    "beta = gsw.beta(surfaceSalinity, bulkSST, dBar)\n",
-    "Cp = gsw.cp_t_exact(surfaceSalinity, bulkSST, dBar)"
+    "# Calculate net heat flux\n",
+    "Qnet = -QnetMinusSW + Qshortwave"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the density flux\n",
-    "evap = evaporation/3600. # conversion from mm/hour to kg/s/m².\n",
-    "precip = rain/3600. # conversion from mm/hour to kg/s/m².\n",
-    "Qnet = -QnetMinusSW + Qshortwave\n",
-    "Ft = -Qnet/(rho0*Cp)\n",
-    "Fs = (evap-precip)/(1-surfaceSalinity/1000)\n",
-    "Qp = rho0*(alpha*Ft + beta*Fs) # density flux\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate buoyancy flux and Obukhov length\n",
-    "Bf = -g*Qp/rho0\n",
-    "ustar = np.sqrt(tau/rho0) # friction velocity\n",
-    "kappa = 0.4 # von Karman constant\n",
-    "L = -ustar**3/(kappa*Bf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +76,9 @@
       "Summary of fluxes defined as positive into the ocean:\n",
       "Sensible heat flux,  4.07 W/m²\n",
       "Latent heat flux, -57.00 W/m²\n",
+      "Shortwave flux, 300.97 W/m²\n",
       "Net longwave radiation, 18.35 W/m²\n",
-      "Net heat flux, 266.38 W/m²\n",
-      "Buoyancy flux, -0.000000109 W/m²\n",
-      "The Obhukov length is,  4.69 m\n"
+      "Net heat flux, 266.38 W/m²\n"
      ]
     }
    ],
@@ -129,10 +87,9 @@
     "print(\"Summary of fluxes defined as positive into the ocean:\")\n",
     "print(\"Sensible heat flux, %5.2f W/m²\" % (-Qsensible))\n",
     "print(\"Latent heat flux, %5.2f W/m²\" % (-Qlatent))\n",
+    "print(\"Shortwave flux, %5.2f W/m²\" % (Qshortwave))\n",
     "print(\"Net longwave radiation, %5.2f W/m²\" % (-LWnet))\n",
-    "print(\"Net heat flux, %5.2f W/m²\" % (Qnet))\n",
-    "print(\"Buoyancy flux, %10.9f W/m²\" % (Bf))\n",
-    "print(\"The Obhukov length is, %5.2f m\" % (L))\n"
+    "print(\"Net heat flux, %5.2f W/m²\" % (Qnet))\n"
    ]
   }
  ],
